Refactor: 1단계 로또 자동 구매 리팩토링